update HTTP method on update and recover routes
